<resources>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="sign_up"><u>Sign up</u></string>

    <string name="app_name">ArchaeoSite</string>
    <string name="select_site_image">Select Site Image</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_site_maps">SiteMaps</string>
    <string name="siteDescription">Site Description</string>
    <string name="siteName">Site Name</string>
    <string name="sitePicture">Site Image</string>
    <string name="title_activity_site">Site</string>
    <string name="title_activity_site_list">My Sites</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_navigator">Navigator</string>
    <string name="menu_addSite">Add</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="hillfort">Hillfort Sites</string>
    <string name="dateInitialize">*Click to select date</string>
    <string name="fromAddtoSaveText">  SAVE  </string>


</resources>