<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:checked="true"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
    </group>

    <item android:title="Main Activity">
        <menu>
            <item
                android:id="@+id/item_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/item_add"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/menu_addSite" />

            <item
                android:id="@+id/item_map"
                android:icon="@android:drawable/ic_menu_mapmode"
                android:title="@string/menu_showMap" />
        </menu>
    </item>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/item_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/menu_logout"
                android:visible="true" />
        </menu>
    </item>
</menu>
